Fixed spacing on list job card. Cuts description after 300 chars

--- a/src/app/cards/inactive-job-list-card/inactive-job-list-card.component.scss
+++ b/src/app/cards/inactive-job-list-card/inactive-job-list-card.component.scss
@@ -4,8 +4,7 @@
     grid-template-areas: 'leftCol topRow'
                          'leftCol bottomRow';
 
-    max-height: 100px;
-    overflow: hidden;
+    // height: 100px;
 
     background: #CBCBCB;
     border-bottom: 2px #E3E3E3 solid;
@@ -14,13 +13,17 @@
         padding: 5px;
         grid-area: leftCol;
         display: grid;
-        grid-template-rows: repeat(2,auto);
+        grid-template-rows: 1fr auto auto 1fr;
 
         color: white;
         background: #4B515D;
 
         .jobPayment {
+            grid-row: 2;
             vertical-align: middle;
+
+            border: 2px solid red;
+            
             mat-icon {
                 font-size: 20px;
                 vertical-align: middle;
@@ -28,7 +31,11 @@
         }
         
         .jobDueDate {
+            grid-row: 3;
             vertical-align: middle;
+
+            border: 2px solid blue;
+
             mat-icon {
                 font-size: 20px;
                 vertical-align: middle;
@@ -52,10 +59,12 @@
         margin-bottom: 10px;
 
         .jobDescription {
+            max-height: 50px;
+            word-wrap: break-word;
+            overflow: hidden;
             font-size: 14px;
             line-height: 14px;
             height: 76px;
-            text-overflow: ellipsis;
         }
 
         .modalButton {
